--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "deepcopy": "^2.1.0",
     "element-plus": "^2.3.1",
     "eslint": "7.x",
+    "mitt": "^3.0.0",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
